feat: add recommender data foundations
Amp-Thread-ID: https://ampcode.com/threads/T-01a10603-a12a-7502-82ac-ce59f87e4a2b
